# MLTaskTauri

./: .gitignore  .npmrc  Cargo.toml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  pyproject.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src-python/lib/: __init__.py
src-tauri/src-python/lib/src/processes/: db.py  ml.py  regression.py  utils.py
src-tauri/src-python/lib/src/struct/: students.py
src-tauri/src-python/lib/tests/: __init__.py  data.py  data_tests.py  students_marks.csv
src-tauri/src-python/mltasktauri/: __init__.py  __main__.py  store.py
src/components/pages/: error.tsx  home.tsx  home_backup.tsx  student.tsx  test.tsx
src/components/ui/: data-table.tsx
src/lib/: types.ts  utils.ts
