[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["eatham532"]

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

pytauri = { version = "0.6.1", features = ["standalone"] }
pyo3 = { version = "0.25" }

serde = { version = "1", features = ["derive"] }


[profile.release]
lto = "thin"

# See: <https://pytauri.github.io/pytauri/0.5/usage/tutorial/build-standalone/#configure-tauri-cli>
[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
